vpc.tf
# Create a VPC
resource "aws_vpc" "vpc_tera" {
  cidr_block = "10.0.0.0/16"
    tags = {
    Name = "vpc_tera"
  }
}
